<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <!-- Status / Toast banner area -->
    <TextView
        android:id="@+id/tv_status_banner"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="Application Updated"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:background="#3D5AFE"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Title -->
    <TextView
        android:id="@+id/tv_employee_dashboard_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="My Applications"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="55dp"
        app:layout_constraintTop_toBottomOf="@id/tv_status_banner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- ListView -->
    <ListView
        android:id="@+id/recycler_applications"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/tv_employee_dashboard_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>
